@@ -4008,11 +4008,8 @@ xmlFAParseBranch(xmlRegParserCtxtPtr ctxt) {
  */
 static void
 xmlFAParseRegExp(xmlRegParserCtxtPtr ctxt, int top) {
-    xmlRegStatePtr start, end, oldend, oldstart;
+    xmlRegStatePtr start, end;
 
-    oldend = ctxt->end;
-
-    oldstart = ctxt->state;
     /* if not top start should have been generated by an epsilon trans */
     start = ctxt->state;
     ctxt->end = NULL;
