@@ -1,4 +1,11 @@
-Tue Sep 28 13:07:37 CEST 2004 Daniel Veillard <daniel@veillard.com
+Tue Sep 28 14:30:22 CEST 2004 Daniel Veillard <daniel@veillard.com>
+
+	* acconfig.h config.h.in configure.in xmlIO.c xmlregexp.c xmlschemas.c
+	  xmlschemastypes.c: another patch from Malcolm Tredinnick fixing
+	  warning generated by the Nonstop Kernel Open System Services 
+	  compiler #151710
+
+Tue Sep 28 13:07:37 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* python/libxml.py: applied patch from Malcolm Tredinnick fixing
 	  python exception hierarchy #139824
